package com.engine.events;

/**
 * GamepadBtn enum.
 * This is the gamepad button.
 */
public enum GamepadBtn {
    /** A gamepad button. */
    BTN_A,
    /** B gamepad button. */
    BTN_B,
    /** X gamepad button. */
    BTN_X,
    /** Y gamepad button. */
    BTN_Y,
    /** Left bumper gamepad button. */
    BTN_LB,
    /** Right bumper gamepad button. */
    BTN_RB,
    /** Left trigger gamepad button. */
    BTN_LT,
    /** Right trigger gamepad button. */
    BTN_RT,
    /** Left joystick gamepad button. */
    BTN_LS,
    /** Right joystick gamepad button. */
    BTN_RS,
    /** View gamepad button. Select on Sony Gamepad */
    BTN_VIEW,
    /** Menu gamepad button. Start on Sony Gamepad */
    BTN_MENU,
    /** D-pad up gamepad button. */
    BTN_DPAD_UP,
    /** D-pad down gamepad button. */
    BTN_DPAD_DOWN,
    /** D-pad left gamepad button. */
    BTN_DPAD_LEFT,
    /** D-pad right gamepad button. */
    BTN_DPAD_RIGHT
}
